[package]
name = "rping"
version = "1.0.0"
description = "Allows Node.js to execute ping requests using the surge-ping crate"
authors = ["Kasim Ahmic"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surge-ping = "0.7.3"
tokio = { version = "1.24.1", features = ["full"] }
once_cell = "1.17.0"
serde = { version = "1.0.152", features=["derive"] }

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["channel-api", "napi-6", "promise-api"]
